--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,17 +2,17 @@
 
 <div class="row">
 
-<div class="col col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 about-col"><img class="bio-pic" src="../../../assets/img/about/drken.jpg">
+<div class="col col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 about-col"><img class="bio-pic" src="../../../assets/img/about/drken.jpg">
 
 <div class="meet-ken ave-blk">Meet Dr. Ken</div>
 <nav class="social-nav">
-  <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-  <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-  <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+  <li><a href="https://www.facebook.com/trateconsultants" target="_blank"><i class="fa fa-facebook"></i></a></li>
+  <!-- <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li> -->
+  <li><a href="https://www.instagram.com/trateconsultants" target="_blank"><i class="fa fa-instagram"></i></a></li>
 </nav>
   
 </div>
-<div class="col col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8 about-col">
+<div class="col col-xs-12 col-sm-12 col-md-12 col-lg-8 col-xl-8 about-col about-col-mobile">
 
 <div class="bio-intro">Dr. Ken of Trate Consultants is one of the fresh new faces in mental health and consultation but is no stranger to it. He is an Atlanta native who has over 10 years of counseling experience and is known for his relatability and humor when it comes to serious issues regarding mental health, relationships, diversity, and topics of great sensitivity. His refreshing “no holds barred” approach to most situations is inviting, yet serves as the impetus to create change. He is a firm believer that every answer anyone needs lies within themselves; you are the authority on you. Dr. Ken believes that he is merely the conduit through which change and improvement are facilitated.
 </div>
@@ -64,6 +64,7 @@
 
 </div>
 </div>
+
   
 
 </div>
