--- a/src/app/components/cta/cta.component.css
+++ b/src/app/components/cta/cta.component.css
@@ -1,2 +1,21 @@
 .cta-title{text-align: center; font-size: 3em; color: #FFF;}
-.cta-row{align-content: center; justify-content: center; align-items: center}
+.cta-row{align-content: center; justify-content: center; align-items: center} 
+
+@media screen and (max-width:1035px){
+
+}
+
+
+@media screen and (max-width:780px){
+
+}
+
+
+@media screen and (max-width:450px){
+
+}
+
+
+@media screen and (max-width:370px){
+
+}
