--- a/src/app/components/fees/fees.component.html
+++ b/src/app/components/fees/fees.component.html
@@ -1,7 +1,7 @@
 <section id="fees-section" class="fees-section container-fluid">
 <div class="row">
 
- <div class="fees-col col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+ <div class="fees-col col col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 
     <table id="fees-table" class="fees-table">
     <!-- <thead>
@@ -55,18 +55,18 @@
  </div>
 
 
- <div class="fee-details-col col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+ <div class="fee-details-col col col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 
   
 <div class="">
 
   <div class="fees-title">Fee Schedule Details</div>
 
-  *Fee (to be negotiated with Dr. Ken prior to his arrival) is dependent upon venue, expected number of attendees, topic, and total number of panelists (if applicable).<br><br>
+  *Fee (to be negotiated prior to arrival) is dependent upon venue, expected number of attendees, topic, and total number of panelists (if applicable).<br><br>
 
-  Dr. Ken does not accept insurance for Teletherapeutic services at this time.. All agreed upon fees will be remitted prior to services, aside from the motivational speaker and panelist fee. The motivational/panelist fee will be determined prior to Dr. Ken’s arrival and remitted upon his arrival to the engagement.<br><br>
+  I do not accept insurance for Teletherapeutic services at this time.. All agreed upon fees will be remitted prior to services, aside from the motivational speaker and panelist fee. The motivational/panelist fee will be determined prior to arrival and remitted upon arrival to the engagement.<br><br>
 
-  Consulting service fees and determined directly by Dr. Ken based on the location, duration, and scope of services. Price and contract will be agreed upon prior to his arrival.
+  Consulting service fees and determined based on the location, duration, and scope of services. Price and contract will be agreed upon prior to  arrival.
 
 
   </div>
