--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -12,9 +12,9 @@
 A Fresh, New Face In Mental Health &amp; Consultation
    </div>
 
-   <div class="hero-subtitle ave-lt">
+   <!-- <div class="hero-subtitle ave-lt">
        blanditiis praesentium voluptatum deleniti atque corrupti q 
-   </div>
+   </div> -->
     
     <div class="hero-cta-button">
         <a href="" class="hero-cta-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Ready To Get Started?</a>
@@ -22,5 +22,3 @@ A Fresh, New Face In Mental Health &amp; Consultation
 
 </div>
 </section>
-
-<!-- At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias -->
