--- a/src/app/components/solutions/solutions.component.html
+++ b/src/app/components/solutions/solutions.component.html
@@ -4,7 +4,7 @@
   <div id="solutions-header" class="solutions-header col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
   <div class="solutions-title-row">
-    <div class="solutions-title ave-md">Lorem Ipsum accusamus dignissimos</div>
+    <div class="solutions-title ave-md">All Solutions</div>
 
   <!-- <div class="solutions-subtitle">At vero eos et accusamus et iusto odio dignissimos ducimus qui <span class="color">blanditiis</span></div> -->
   </div>
@@ -13,11 +13,61 @@
 
 
 
+<div class="flex-container solution-block teletherapy-desktop col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+  <img class="solutions-img teletherapy" src="../../../assets/img/solutions/teletherapy.jpg">
+</div>
+
+<div class="flex-container solution-block teletherapy-mobile col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+  <img class="solutions-img teletherapy" src="../../../assets/img/solutions/teletherapy.jpg">
+</div>
+
+<div class="flex-container solution-block teletherapy-mobile col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+  <div>
+    <div id="teletherapy-mobile" class="solution-block-title">Teletherapy</div>
+
+    <div class="solution-block-text">I provide therapeutic services that include the “worried well” and non-severe diagnoses. This includes but is not limited to relationship problems, transitional issues (new job, moving, etc), situational depression, etc. These sessions will be done remotely via Skype/FaceTime (or traditional phone call) for the convenience of the client.</div>
+  </div>
+</div>
+
+<div class="flex-container solution-block solutions-col-right col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+  <div class="solution-block-text-block">
+
+    <div id="teletherapy" class="solution-block-title teletherapy-desktop">Teletherapy</div>
+
+    <div class="solution-block-text teletherapy-desktop">I provide therapeutic services that include the “worried well” and non-severe diagnoses. This includes but is not limited to relationship problems, transitional issues (new job, moving, etc), situational depression, etc. These sessions will be done remotely via Skype/FaceTime (or traditional phone call) for the convenience of the client.</div>
+  
+    <div id="consulting" class="solution-block-title">Consulting</div>
+
+<div class="solution-block-text">Consulting services can be rendered in two fashions: educational setting and corporate setting.</div>
+
+<div class="solution-block-text">I have worked extensively with teachers, principals, and school boards, and administrators to help improve overall educational offerings and conditions. This includes elementary schools, middle schools, high schools, colleges, and universities.</div>
+
+<div class="solution-block-text">In the corporate setting, offerings include Diversity Training, Cultural Sensitivity Training, Effective Communication Training, and other techniques that improve morale, employee satisfaction, and employee retention.</div>
+
+  <div class="solution-block-text solution-block-text-em"><span class="color ave-blk">*GUARANTEE:</span> While I can guarantee confidentiality on my end, I cannot guarantee on your end, confidentiality from anyone who may see or view information that would point to you seeking counseling, mental health services, or interview coaching from Dr. Ken.</div>
+
+
+  <div class="solutions-button">
+    <a href="" class="solutions-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Schedule Consultation</a>
+  </div>
+
+  </div>
+</div>
 
 
 
 
-<div id="interview" class="solutions-col-left col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+<div class="interview-mobile-col flex-container col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+    <img class="solutions-img interview" src="../../../assets/img/solutions/interview3.png">
+
+</div>
+
+<div class="interview-mobile-col flex-container col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+    <span class="interview-mobile-label">Interview Coaching</span>
+
+</div>
+
+<div id="interview" class="solutions-col-left col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
 <div class="solution-block-title">Interview Coaching</div>
 
 <div class="solution-block-text">Interview coaching will include an assessment of the client’s strengths and weaknesses in order to hone their skillset so that they can soar in an interview setting. Interventions will ultimately include a mock interview that will give the client a detailed assessment of their interviewing skills and areas in which they can improve.</div>
@@ -51,56 +101,37 @@ The coach will review your preparation, including your completed homework exerci
 </div>
 
 
-
-<div class="flex-container col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-    <img class="solutions-img teletherapy" src="../../../assets/img/solutions/interview3.png">
-
+<div class="interview-col flex-container col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+    <img class="solutions-img interview" src="../../../assets/img/solutions/interview3.png">
 </div>
 
 
-<div class="flex-container solution-block col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-  <img class="solutions-img teletherapy" src="../../../assets/img/solutions/teletherapy.jpg">
+<div class="flex-container fmla-desktop solution-block-top col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+  <img class="solutions-img " src="../../../assets/img/solutions/fmla2.jpg">
 </div>
 
-<div class="flex-container solution-block solutions-col-right col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+
+<div class="flex-container fmla-mobile solution-block-top col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
   <div class="solution-block-text-block">
+  <div class="solution-block-title">FMLA (Family Medical Leave Act) Assessments</div>
 
-    <div id="teletherapy" class="solution-block-title">Teletherapy</div>
-
-    <div class="solution-block-text">Dr. Ken provides therapeutic services that include the “worried well” and non-severe diagnoses. This includes but is not limited to relationship problems, transitional issues (new job, moving, etc), situational depression, etc. These sessions will be done remotely via Skype/FaceTime (or traditional phone call) for the convenience of the client.</div>
-  
-    <div id="consulting" class="solution-block-title">Consulting</div>
-
-<div class="solution-block-text">Consulting services can be rendered in two fashions: educational setting and corporate setting.</div>
-
-<div class="solution-block-text">Dr. Ken has worked extensively with teachers, principals, and school boards, and administrators to help improve overall educational offerings and conditions. This includes elementary schools, middle schools, high schools, colleges, and universities.</div>
-
-<div class="solution-block-text">In the corporate setting Dr. Ken’s offerings include Diversity Training, Cultural Sensitivity Training, Effective Communication Training, and other techniques that improve morale, employee satisfaction, and employee retention.</div>
-
-  <div class="solution-block-text solution-block-text-em"><span class="color ave-blk">*GUARANTEE:</span> While I can guarantee confidentiality on my end, I cannot guarantee on your end, confidentiality from anyone who may see or view information that would point to you seeking counseling, mental health services, or interview coaching from Dr. Ken.</div>
-
-
-  <div class="solutions-button">
-    <a href="" class="solutions-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Schedule Consultation</a>
-  </div>
-
-  </div>
+<div class="solution-block-text">With this service I'll can evaluate your current symptoms and behaviors and complete FMLA (Family Medical Leave Act) paperwork for your employer that would assist them in making a determination of the availability of those services to you, their employee. </div>
+</div>
 </div>
 
-
-
-
-<div class="flex-container solutions-col-left solution-block col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+<div class="flex-container solutions-col-left solution-block-top col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
 <div class="solution-block-text-block">
+<div class="solution-block-title fmla-desktop">FMLA (Family Medical Leave Act) Assessments</div>
+
+<div class="solution-block-text fmla-desktop">With this service I'll can evaluate your current symptoms and behaviors and complete FMLA (Family Medical Leave Act) paperwork for your employer that would assist them in making a determination of the availability of those services to you, their employee. </div>
+
 
 <div id="speaking" class="solution-block-title">Motivational/Panel Speaking</div>
 
-<div class="solution-block-text">Dr. Ken is a dynamic speaker and panelist who has an infectious exuberance and is knowledgeable about nearly any topic. While he is well versed in many areas his speaking and panelist opportunities have included such topics as Self-Esteem, Domestic Violence, Dating and Relationships, Effective Communication, Children and Social Media, Health and Nutrition, Financial Responsibility, Parental Disciplining, Teen Sex Education/Abstinence. But he’s available to speak on any topic for which you may need a speaker or panelist.</div>
+<div class="solution-block-text">I'm a dynamic speaker and panelist who has an infectious exuberance and is knowledgeable about nearly any topic. While he is well versed in many areas his speaking and panelist opportunities have included such topics as Self-Esteem, Domestic Violence, Dating and Relationships, Effective Communication, Children and Social Media, Health and Nutrition, Financial Responsibility, Parental Disciplining, Teen Sex Education/Abstinence. But he’s available to speak on any topic for which you may need a speaker or panelist.</div>
 
 
-<div class="solution-block-title">FMLA (Family Medical Leave Act) Assessments</div>
 
-<div class="solution-block-text">With this service Dr. Ken can evaluate your current symptoms and behaviors and complete FMLA (Family Medical Leave Act) paperwork for your employer that would assist them in making a determination of the availability of those services to you, their employee. </div>
 
 
 <div class="solutions-button">
@@ -110,11 +141,9 @@ The coach will review your preparation, including your completed homework exerci
   </div>
 </div>
 
-<div class="flex-container solution-block col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-  <img class="solutions-img teletherapy" src="../../../assets/img/solutions/interview.jpg">
+
+<div class="flex-container fmla-mobile solution-block-top col col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+  <img class="solutions-img " src="../../../assets/img/solutions/fmla2.jpg">
 </div>
-
-
 </div>
 </section>
-
