--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
 
 <div class="row flex-container">
 
-  <div id="logo" class="logo col col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+  <div id="logo" class="logo col col-xs-4 col-sm-4 col-md-4 col-lg-3 col-xl-3">
     <span class="ave-hv">Trate</span> <span class="ave-lt"> Consultants</span>
   </div>
 
@@ -13,13 +13,29 @@
   <li class="menu-link"><a href="#" (click)="toSpeaking()">Speaking</a></li>
   <li class="menu-link"><a href="#" (click)="toFees()">Fees</a></li>
   <li class="menu-link"><a href="#" (click)="toAbout()">About</a></li>
-  
 </nav>
 
-<div id="consultation-header" class="consultation-header col col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 align-right">
+<nav id="mobile-menu-nav-bars" (click)="toggleMobileMenu()" class="mobile-menu-nav col col-xs-4 col-sm-4 col-md-4 col-lg-6 col-xl-6">
+  <div class="mobile-menu-label-div"><span class="mobile-menu-label">Menu</span> <i class="fa fa-bars"></i></div>
+</nav>
+
+<div id="consultation-header" class="consultation-header col col-xs-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 align-right">
     <a href="" class="consultation-btn-header ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Schedule Consultation</a>
   </div>
 
 </div>
 </div>
 
+
+<section id="mobile-menu-section" class="col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mobile-menu-section" *ngIf="showMobileMenu === true">
+  <div class="exit-mobile-menu align-right"><i (click)="exitMobileMenu()" class="fa fa-times"></i></div>
+  <nav id="mobile-menu-nav" class="">
+  <li class="mobile-menu-link"><a href="#" (click)="toInterview()">Interview Coaching</a></li>
+  <li class="mobile-menu-link"><a href="#" (click)="toTeletherapyMobile()">Teletherapy</a></li>
+  <li class="mobile-menu-link"><a href="#" (click)="toConsulting()">Consulting</a></li>
+  <li class="mobile-menu-link"><a href="#" (click)="toSpeaking()">Speaking</a></li>
+  <li class="mobile-menu-link"><a href="#" (click)="toFees()">Fees</a></li>
+  <li class="mobile-menu-link"><a href="#" (click)="toAbout()">About</a></li>
+  <li><a href="" class="consultation-btn-mobile ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Schedule Consultation</a></li>
+</nav>
+</section>
