--- a/src/app/components/solutions/solutions.component.css
+++ b/src/app/components/solutions/solutions.component.css
@@ -7,7 +7,8 @@
 .solutions-col-left{padding-left: 40px;}
 .solutions-col-right{padding-right: 40px;}
 .solutions-block-right{padding-right: 0px;}
-.solution-block{font-size: 1em; margin-top: 100px;}
+.solution-block{font-size: 1em; margin-bottom: 100px;}
+.solution-block-top{font-size: 1em; margin-top: 100px;}
 .solutions-button{margin-top: 30px;}
 .solutions-button-link{color: #FFF; background-color: #550e6c; padding: 15px 20px; font-size: 16px;}
 .solution-block-list{margin: 15px 0 25px;}
@@ -15,4 +16,44 @@
 .solution-block-title{font-size: 1.5em; color:#ccc; margin-bottom: 6px;}
 .solution-block-text{display: block; margin-bottom: 12px;}
 .solution-block-text-em{font-style: italic;}
-/* #session-details{display: none;} */
+/* #session-details{display: none;} */ 
+.solutions-img{box-shadow: 0px 0px 100px 10px rgba(51,51,51,.4);}
+.interview-mobile-col{align-content: center; align-items: center; justify-content: center; display: none;}
+.interview-mobile-label{font-size: 2em; color: #CCC; font-family: ave-blk, sans-serif;}
+.teletherapy-mobile{display: none;}
+.fmla-mobile{display: none;}
+
+
+
+@media screen and (max-width:1035px){
+.interview-col, #interview .solution-block-title, .fmla-desktop{display: none;}
+.interview-mobile-col{display: flex;}
+#interview{margin-top: 40px;}
+.teletherapy-desktop{display: none;}
+.teletherapy-mobile{display: flex;}
+.solution-block{margin-bottom: 40px;}
+.solution-block-top{margin-top: 40px;}
+.fmla-mobile{display: flex; margin-top: 70px;}
+
+}
+
+
+@media screen and (max-width:780px){
+
+}
+
+
+@media screen and (max-width:450px){
+.solutions-section .row{display: block;}
+.solutions-title{font-size: 2em;}
+.interview-mobile-label{margin-top: 30px;}
+.solutions-col-left{padding-left: 15px;}
+.solutions-col-right{padding-right: 15px;}
+
+
+}
+
+
+@media screen and (max-width:370px){
+.solutions-title{font-size: 1.5em;}
+}
