--- a/src/app/components/fees/fees.component.html
+++ b/src/app/components/fees/fees.component.html
@@ -64,7 +64,7 @@
 
   *Fee (to be negotiated prior to arrival) is dependent upon venue, expected number of attendees, topic, and total number of panelists (if applicable).<br><br>
 
-  I do not accept insurance for Teletherapeutic services at this time.. All agreed upon fees will be remitted prior to services, aside from the motivational speaker and panelist fee. The motivational/panelist fee will be determined prior to arrival and remitted upon arrival to the engagement.<br><br>
+  I do not accept insurance for Teletherapeutic services at this time. All agreed upon fees will be remitted prior to services, aside from the motivational speaker and panelist fee. The motivational/panelist fee will be determined prior to arrival and remitted upon arrival to the engagement.<br><br>
 
   Consulting service fees and determined based on the location, duration, and scope of services. Price and contract will be agreed upon prior to  arrival.
 
