--- a/src/app/components/solutions/solutions.component.html
+++ b/src/app/components/solutions/solutions.component.html
@@ -90,7 +90,7 @@
 
 <div class="solution-block-text">
 <span class="ave-blk">First 1.5 Hour Session :</span>
-Your assigned coach will start with a diagnostic mock interview. It’ll help us calibrate your current interview performance. From there, we’ll offer an assessment of how you’re currently performing. They’ll explain what’s working, what’s not, and how to improve it. Then, much like a physical therapist, the coach will start working with you on a variety of exercises to develop your personal brand and interview responses, tailored to you. At the end of the first session, the coach will email you notes, summarizing areas of improvement and exercises they’d like you to complete before the next session.
+I start with a diagnostic mock interview. It’ll help us calibrate your current interview performance. From there, we’ll offer an assessment of how you’re currently performing. They’ll explain what’s working, what’s not, and how to improve it. Then, much like a physical therapist, the coach will start working with you on a variety of exercises to develop your personal brand and interview responses, tailored to you. At the end of the first session, the coach will email you notes, summarizing areas of improvement and exercises they’d like you to complete before the next session.
 </div>
 
 <div class="solution-block-text">
@@ -115,7 +115,7 @@ The coach will review your preparation, including your completed homework exerci
   <div class="solution-block-text-block">
   <div class="solution-block-title">FMLA (Family Medical Leave Act) Assessments</div>
 
-<div class="solution-block-text">With this service I'll can evaluate your current symptoms and behaviors and complete FMLA (Family Medical Leave Act) paperwork for your employer that would assist them in making a determination of the availability of those services to you, their employee. </div>
+<div class="solution-block-text">With this service I will can evaluate your current symptoms and behaviors and complete FMLA (Family Medical Leave Act) paperwork for your employer that would assist them in making a determination of the availability of those services to you, their employee. </div>
 </div>
 </div>
 
@@ -128,11 +128,7 @@ The coach will review your preparation, including your completed homework exerci
 
 <div id="speaking" class="solution-block-title">Motivational/Panel Speaking</div>
 
-<div class="solution-block-text">I'm a dynamic speaker and panelist who has an infectious exuberance and is knowledgeable about nearly any topic. While he is well versed in many areas his speaking and panelist opportunities have included such topics as Self-Esteem, Domestic Violence, Dating and Relationships, Effective Communication, Children and Social Media, Health and Nutrition, Financial Responsibility, Parental Disciplining, Teen Sex Education/Abstinence. But he’s available to speak on any topic for which you may need a speaker or panelist.</div>
-
-
-
-
+<div class="solution-block-text">I'm a dynamic speaker and panelist who has an infectious exuberance and is knowledgeable about nearly any topic. While I am well-versed in many areas his speaking and panelist opportunities have included such topics as Self-Esteem, Domestic Violence, Dating and Relationships, Effective Communication, Children and Social Media, Health and Nutrition, Financial Responsibility, Parental Disciplining, Teen Sex Education/Abstinence. But he’s available to speak on any topic for which you may need a speaker or panelist.</div>
 
 <div class="solutions-button">
     <a href="" class="solutions-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Get Started Today</a>
