--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -17,7 +17,7 @@ A Fresh, New Face In Mental Health &amp; Consultation
    </div> -->
     
     <div class="hero-cta-button">
-        <a href="" class="hero-cta-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Ready To Get Started?</a>
+        <a href="" class="hero-cta-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/drkentrateconsultants/60min');return false;">Ready To Get Started?</a>
     </div>
 
 </div>
