--- a/src/app/components/solutions/solutions.component.html
+++ b/src/app/components/solutions/solutions.component.html
@@ -48,7 +48,7 @@
 
 
   <div class="solutions-button">
-    <a href="" class="solutions-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Schedule Consultation</a>
+    <a href="" class="solutions-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/drkentrateconsultants/60min');return false;">Schedule Consultation</a>
   </div>
 
   </div>
@@ -81,7 +81,7 @@
 </div>
 
 <!-- <div class="solutions-button">
-    <a href="" class="solutions-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Here’s how we’ll spend the sessions together</a>
+    <a href="" class="solutions-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/drkentrateconsultants/60min');return false;">Here’s how we’ll spend the sessions together</a>
   </div> -->
 
 <div id="session-details">
@@ -131,7 +131,7 @@ The coach will review your preparation, including your completed homework exerci
 <div class="solution-block-text">I'm a dynamic speaker and panelist who has an infectious exuberance and is knowledgeable about nearly any topic. While I am well-versed in many areas his speaking and panelist opportunities have included such topics as Self-Esteem, Domestic Violence, Dating and Relationships, Effective Communication, Children and Social Media, Health and Nutrition, Financial Responsibility, Parental Disciplining, Teen Sex Education/Abstinence. But he’s available to speak on any topic for which you may need a speaker or panelist.</div>
 
 <div class="solutions-button">
-    <a href="" class="solutions-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Get Started Today</a>
+    <a href="" class="solutions-button-link ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/drkentrateconsultants/60min');return false;">Get Started Today</a>
   </div>
 
   </div>
