--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
 </nav>
 
 <div id="consultation-header" class="consultation-header col col-xs-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 align-right">
-    <a href="" class="consultation-btn-header ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/thebeardedtek/30min');return false;">Schedule Consultation</a>
+    <a href="" class="consultation-btn-header ave-lt" onclick="Calendly.showPopupWidget('https://calendly.com/drkentrateconsultants/60min');return false;">Schedule Consultation</a>
   </div>
 
 </div>
